added style and rearranged buttons

--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,4 +1,8 @@
 
+.Table {
+    margin-top:1em;
+}
+
 table,tr,td{
     margin-top:2em;
     margin-left: auto;
@@ -11,3 +15,105 @@ tr, td{
     width:2em;
     height:2em;
 }
+
+.button {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 3em;
+  min-width: 0;
+  outline: none;
+  padding: 1em 1.5em;
+  margin:1em;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform;
+}
+
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+select{
+    appearance: none;
+    border: 2px solid #1A1A1A;
+    background-color: transparent;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 3em;
+    min-width: 0;
+    outline: none;
+    padding:0 1em;
+    margin:1em;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform;
+}
+
+select-color.green{
+    background-color: green;
+}
+  
+  .select-color.red {
+    background-color: red;
+    color:white;
+  }
+  
+  .select-color.blue {
+    background-color: blue;
+    color:white;
+  }
+  
+  .select-color.green {
+    background-color: green;
+    color:white;
+  }
+  
+  .select-color.yellow {
+    background-color: rgba(255, 255, 0, 0.543);
+    color:rgb(0, 0, 0);
+  }
+
+  .select-color.pink {
+    background-color: pink;
+    color:white;
+  }
